[metadata]
name = osc-port-bindings
summary = OpenStackClient plugin for managing OpenStack port bindings
description-file =
    README.md
author = Andrew Karpow
author-email = andrew.karpow@sap.com
home-page = https://github.com/sapcc/osc-port-bindings
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    osc_port_bindings

[entry_points]
openstack.cli.extension =
    port_bindings = osc_port_bindings.plugin

openstack.port_bindings.v1 =
    port_bindings_list = osc_port_bindings.commands:ListPortBinding
    port_bindings_create = osc_port_bindings.commands:CreatePortBinding
    port_bindings_activate = osc_port_bindings.commands:ActivatePortBinding
    port_bindings_delete = osc_port_bindings.commands:DeletePortBinding
